# greenhouse-climate-controller

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json
.claude/plans/: implementation-plan.md
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: ci.yml
climate-controller/: Cargo.toml  Dockerfile  README.md
climate-controller/config/: greenhouse.example.toml
climate-controller/src/: clock.rs  domain.rs  faults.rs  lib.rs  main.rs  metrics.rs  mqtt.rs  overrides.rs  pipeline.rs  rest.rs  rng.rs  runtime.rs  sensing.rs  state.rs  telemetry.rs  validation.rs
climate-controller/src/config/: connection.rs  control.rs  hal.rs  mod.rs  safety.rs  sensing.rs  setpoints.rs  simulation.rs  zones.rs
climate-controller/src/control/: co2.rs  humidity.rs  irrigation.rs  lighting.rs  mod.rs  pid.rs  temperature.rs
climate-controller/src/hal/: mod.rs  sim.rs
climate-controller/src/safety/: actuator_health.rs  constraints.rs  interlocks.rs  mod.rs
climate-controller/tests/: config.rs  conformance.rs  pipeline.rs  runtime.rs  scenarios.rs  smoke.rs
climate-frontend/: .dockerignore  .lighthouserc.json  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
climate-frontend/src/: main.tsx  vite-env.d.ts
climate-frontend/src/api/: authToken.ts  client.ts  retryPolicy.ts  schemas.ts  ws.ts
climate-frontend/src/app/: App.tsx  StreamProvider.tsx  providers.tsx  routes.tsx  stream-context.ts
climate-frontend/src/components/: AppFrame.tsx  Card.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  SideNav.tsx  ThemeToggle.tsx  TopBar.tsx  connection.ts
climate-frontend/src/features/: NotFound.tsx
climate-frontend/src/hooks/: ThemeProvider.tsx  theme.ts  useLiveActuators.ts  useLiveSeries.ts  usePersistentRange.ts  useRole.ts
climate-frontend/src/lib/: chartScale.ts  chartStyle.ts  color.ts  derivations.ts  livePatch.ts  stackedChart.ts  timeFormat.ts
climate-frontend/src/styles/: global.css  tokens.css
climate-frontend/tests/: fixtures.ts  setup.ts  utils.tsx
climate-frontend/tests/e2e/: greenhouse.spec.ts
climate-frontend/tests/unit/: activity.test.tsx  actuatorPanel.test.tsx  adapters.test.ts  alignSeries.test.ts  app.test.tsx  auth.test.ts  chartScale.test.ts  client.test.ts  color.test.ts  connection.test.ts  derivations.test.ts  dialog.test.tsx  fleet.test.tsx  fleetHistory.test.ts  fleetPolling.test.ts  fleetRefresh.test.tsx  greenhouseDetail.test.tsx  livePatch.test.ts  (+22 more)
climate-optimizer/: .dockerignore  Dockerfile  README.md  pyproject.toml
climate-optimizer/prompts/: planner.v1.md
climate-optimizer/src/climate_optimizer/: __init__.py  __main__.py  auth.py  config.py  constraints.py  cycle.py  dataaccess.py  gating.py  logging.py  metrics.py  params.py  runtime.py  scheduler.py  schema_validation.py  store.py  twin.py
climate-optimizer/src/climate_optimizer/models/: __init__.py  base.py  context.py  enums.py  plan.py  setpoints.py
climate-optimizer/src/climate_optimizer/planner/: __init__.py  chain.py  planner.py  serializer.py  state_change.py
climate-optimizer/src/climate_optimizer/service/: __init__.py  app.py  context.py  deps.py  routes.py  schemas.py
climate-optimizer/tests/: conftest.py  test_auth.py  test_config.py  test_constraints.py  test_cycle.py  test_dataaccess.py  test_gating.py  test_models.py  test_planner_chain.py  test_planner_serializer.py  test_runtime.py  test_scheduler.py  test_schema_validation.py  test_service.py  test_state_change.py  test_store.py  test_twin.py
climate-platform/: .dockerignore  .golangci.yml  Dockerfile  README.md  go.mod  go.sum
climate-platform/test/: api_test.go  integration_test.go  jobs_test.go  planning_context_test.go  profiles_test.go
contracts/: README.md
contracts/controller-platform-telemetry-mqtt/: README.md  actuator-state.schema.json  envelope.schema.json  fault-event.schema.json  sensor-reading.schema.json  system-state.schema.json
contracts/controller-rest/: README.md  openapi.json
contracts/frontend-rest/: README.md  openapi.json  redocly.yaml
contracts/frontend-ws/: README.md  common.schema.json  drift.schema.json  envelope.schema.json  event.schema.json  message.schema.json  status.schema.json
contracts/mqtt/: README.md  actuator-state.schema.json  envelope.schema.json  fault-event.schema.json  sensor-reading.schema.json  system-state.schema.json
contracts/optimizer-internal-plan-schema/: README.md  optimizer-plan.schema.json  plan-record.schema.json  setpoints.schema.json
contracts/optimizer-plan/: README.md  optimizer-plan.schema.json  plan-record.schema.json  setpoints.schema.json
contracts/optimizer-platform-setpoints-rest/: README.md  openapi.json  redocly.yaml
contracts/optimizer-read-rest/: README.md  redocly.yaml
contracts/optimizer-write-rest/: README.md  openapi.json  redocly.yaml
contracts/platform-controller-control-rest/: README.md  openapi.json  redocly.yaml
contracts/platform-dashboard-live-ws/: README.md  common.schema.json  drift.schema.json  envelope.schema.json  event.schema.json  message.schema.json  status.schema.json  telemetry.schema.json
contracts/platform-dashboard-rest/: README.md  openapi.json  redocly.yaml
contracts/platform-optimizer-planning-rest/: README.md  openapi.json  redocly.yaml
contracts/setpoints-rest/: README.md
controller/: README.md
deploy/: .env.example  README.md  docker-compose.yml
deploy/keycloak/: realm.json
deploy/prometheus/: prometheus.yml
deploy/proxy/: nginx.conf
deploy/scripts/: fresh-run.sh  gen-controllers.sh  get-token.sh  inject-faults.sh  reset-sim-data.sh  reset-sim-data.test.sh  resolve-sim-start.sh  resolve-sim-start.test.sh
docs/: backlog.md
docs/decisions/: architecture-design-record.md  local-environment-record.md  request-for-comments.md
docs/specs/: architecture-spec.md  constraints.md  non-functional-requirements.md  purpose-and-content.md
optimizer/: README.md
platform/: README.md
scripts/: validate-contracts.mjs
(+425 files in other folders)
