[package]
name = "climate-controller"
version = "0.1.0"
edition = "2024"
description = "Deterministic real-time greenhouse climate controller (Phase 1)"
license = "MIT"
publish = false

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
