[package]
name = "climate-controller"
version = "0.1.0"
edition = "2024"
description = "Deterministic real-time greenhouse climate controller (Phase 1)"
license = "MIT"
publish = false

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
# Prometheus text exposition for the controller's own /metrics surface (controller-health).
# default-features off drops the unused protobuf encoder; the text encoder is in the base crate.
prometheus = { version = "0.13", default-features = false }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
# `test-util` enables tokio's paused-clock test runtime for deterministic scheduling tests.
tokio = { version = "1.52.3", features = ["test-util"] }
# `ServiceExt::oneshot` drives the REST router in-process (no bound socket) for the write-auth
# middleware test. tower is already an axum transitive dependency; this only surfaces it for tests.
tower = { version = "0.5", features = ["util"] }
# Schema-validates the controller's emitted MQTT/REST payloads against contracts/ in the conformance
# test — the in-toolchain complement to the Node/Ajv harness (verification spec §4).
jsonschema = "0.34"
