# Phase 3 climate optimizer — Python project (spec 12: tech stack).
# uv manages the environment and the committed uv.lock; the format/lint/typecheck/test
# gate (CLAUDE.md) runs as `uv run ruff format`, `uv run ruff check`, `uv run mypy`,
# `uv run pytest`. This first slice is the deterministic core: no FastAPI/LangChain yet
# (those land with the service slice), so those dependencies are deliberately absent.
[project]
name = "climate-optimizer"
version = "0.1.0"
description = "Phase 3 AI-driven greenhouse climate optimizer — deterministic core (config, models, input gate, digital twin, constraint engine, Phase-2 client)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Domain models + typed settings mirroring the wire contracts (spec 12: service framework / config).
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Digital-twin numerics — the closed-form exponential integrator (spec 12: simulation).
    # scipy is intentionally omitted: the v1 twin is closed-form plain NumPy (spec 03 §1.2);
    # add scipy only if a numerical ODE solver is ever needed (spec 12 trip-wire).
    "numpy>=2.0",
    # Phase-2 read/write client (spec 12: data access) — async-native, shares the future FastAPI model.
    "httpx>=0.27",
    # Offline JSON-Schema validation against contracts/ (spec 12: contract validation).
    "jsonschema>=4.22",
    "referencing>=0.35",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-asyncio>=0.23", # tests the async Phase-2 client
    "respx>=0.21",          # httpx transport mock for data-access tests
    "types-jsonschema",     # mypy stubs
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_optimizer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
# The Ruff formatter owns code line width (line-length = 100 above). E501 is waived so the linter
# does not additionally flag explanatory prose in comments/docstrings, which the formatter leaves
# unwrapped — code that overflows is still reflowed by the formatter.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
mypy_path = ["src", "tests"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
